Review Request 7317 - EnrichmentsWizard onhover tile bg user feedback - EnrichmentsWizard breadcrumbs now align with pagination, take up less vertical space - EnrichmentsWizard Download icon border radius fix and animation icon color fix - EnrichmentsWizard filter right-margin aligns with HR - EnrichmentsWizard AccountLookup button height adjustment - EnrichmentsWizard Category and Subcategory truncation/white-space fixed

--- a/le-ui/projects/leadprioritization/app/enrichment/views/EnrichmentWizardView.scss
+++ b/le-ui/projects/leadprioritization/app/enrichment/views/EnrichmentWizardView.scss
@@ -13,11 +13,17 @@
         input[type="radio"], input[type="checkbox"] {
             margin: 0;
         }
+        .select-more {
+            border-radius: 6px;
+        }
         & > li {
             @include flex-item(0 1 auto);
             margin-right: 10px;
             label {
                 width: auto;
+            }
+            &:last-child {
+                margin-right: 0;
             }
             &[disabled] {
                 pointer-events: none;
@@ -25,6 +31,14 @@
             }
             &.query {
                 margin-right: 16px;
+            }
+            &.download button.select-more span::before {
+                -webkit-transition: color 0s linear 0s;
+                -moz-transition: color 0s linear 0s;
+                transition: color 0s linear 0s;
+            }
+            &.account-lookup button {
+                height: 3em;
             }
             &.info {
                 flex: 1 1 auto;
@@ -106,9 +120,14 @@
         }
     }
 
-    pd-pagination-controls .pd-pagination {
-        text-align: right;
-        margin-right: 15px;
+    .enrichment-wizard-pagination {
+        float: right;
+        display: inline-block;
+
+        pd-pagination-controls .pd-pagination {
+            text-align: right;
+            margin-right: 15px;
+        }
     }
 
    .categories {
@@ -198,6 +217,8 @@
                 h2 {
                     text-align: center;
                     font-size: 15px;
+                    margin-bottom: 5px;
+                    white-space: nowrap;
                     .category-icon {
                         height: 40px;
                         width: 40px;
@@ -232,6 +253,7 @@
         -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+        clear: both;
         .subcategory {
             @include flex-item(0 0 auto);
             width: $box-width;
@@ -283,6 +305,7 @@
     .subcategory-back {
         font-size: 18px;
         margin-top: 10px;
+        display: inline-block;
     }
 
     .enrichments {
@@ -290,6 +313,7 @@
         -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+        clear: both;
         .box {
             @include flex-item(0 0 auto);
             width: $box-width;
@@ -531,8 +555,9 @@
         &.color {
             color: #33bdb7;
         }
-        &.background {
-            background: #33bdb7;
+        &.background:not(.active):hover {
+            background-color: rgba(51,189,183,.033) !important;
+            transition-duration: 0s;
         }
         &.border {
             border-color: #33bdb7;
@@ -549,8 +574,9 @@
         &.color {
             color: #65b7e6;
         }
-        &.background {
-            background: #65b7e6;
+        &.background:not(.active):hover {
+            background-color: rgba(101,183,230,.033) !important;
+            transition-duration: 0s;
         }
         &.border {
             border-color: #65b7e6;
@@ -567,8 +593,9 @@
         &.color {
             color: #f15a5a;
         }
-        &.background {
-            background: #f15a5a;
+        &.background:not(.active):hover {
+            background-color: rgba(241,90,90,.033) !important;
+            transition-duration: 0s;
         }
         &.border {
             border-color: #f15a5a;
@@ -585,8 +612,9 @@
         &.color {
             color: #8e71b2;
         }
-        &.background {
-            background: #8e71b2;
+        &.background:not(.active):hover {
+            background-color: rgba(142,113,178,.033) !important;
+            transition-duration: 0s;
         }
         &.border {
             border-color: #8e71b2;
@@ -603,8 +631,9 @@
         &.color {
             color: #70bf4a;
         }
-        &.background {
-            background: #70bf4a;
+        &.background:not(.active):hover {
+            background-color: rgba(112,191,74,.033) !important;
+            transition-duration: 0s;
         }
         &.border {
             border-color: #70bf4a;
@@ -621,8 +650,9 @@
         &.color {
             color: #fdbc49;
         }
-        &.background {
-            background: #fdbc49;
+        &.background:not(.active):hover {
+            background-color: rgba(253,188,73,.033) !important;
+            transition-duration: 0s;
         }
         &.border {
             border-color: #fdbc49;
@@ -639,8 +669,9 @@
         &.color {
             color: #26649b;
         }
-        &.background {
-            background: #26649b;
+        &.background:not(.active):hover {
+            background-color: rgba(38,100,155,.033) !important;
+            transition-duration: 0s;
         }
         &.border {
             border-color: #26649b;
